Fix Password Reset on tablet (#1224)

--- a/frontend/components/AuthenticationFormWrapper/_styles.scss
+++ b/frontend/components/AuthenticationFormWrapper/_styles.scss
@@ -1,11 +1,7 @@
 .auth-form-wrapper {
   @include display(flex);
   @include flex-direction(column);
-  @include justify-content(flex-start);
+  @include justify-content(center);
   @include flex-grow(1);
   padding: $base 0;
-
-  @include breakpoint(desktop) {
-    @include justify-content(center);
-  }
 }
